apps/plantuml-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plantuml-server
  labels:
    istio-injection: enabled
