apps/plantuml-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantuml-server
  labels: {} # taken care of by kustomize
spec:
  replicas: 1
  selector:
    matchLabels: {} # taken care of by kustomize
  template:
    metadata:
      labels: {} # taken care of by kustomize
    spec:
      containers:
        - name: plantuml-server
          image: plantuml/plantuml-server:v1.2022.2
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /tmp/jetty
              name: jetty-tmp
          resources:
            limits:
              memory: 3G
              cpu: 1000m
      volumes:
        - name: jetty-tmp
          emptyDir: {}
