apps/plantuml-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantuml
  namespace: plantuml-server
spec:
  selector: {} # taken care of by kustomize
  ports:
    - targetPort: http
      port: 8080
      name: http
      protocol: TCP
