apps/plantuml-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plantuml-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: istio
  rules:
    - host: plantuml.nazarewk.pw
      http:
        paths:
          - backend:
              service:
                name: plantuml
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - secretName: plantuml-server-tls
      hosts:
        - plantuml.nazarewk.pw
